root/static/data/examples/Sahni_et_al_Cell_2015_Table_S1A.err
Error: no uniprot for 'NP_055139'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 179.
Error: no uniprot for 'NP_055139'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 180.
Error: no uniprot for 'NP_071407'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 506.
Error: no uniprot for 'NP_001005749'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 1160.
Error: no uniprot for 'NP_001005749'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 1161.
Error: no uniprot for 'NP_001005749'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 1162.
Error: no uniprot for 'NP_001005749'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 1163.
Error: no uniprot for 'NP_001077368'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 1267.
Error: no uniprot for 'NP_000874'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 1471.
Error: no uniprot for 'NP_000874'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 1472.
Error: no uniprot for 'NP_000874'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 1473.
Error: no uniprot for 'NP_000874'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 1474.
Error: no uniprot for 'NP_000516'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 1521.
Error: no uniprot for 'NP_000516'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 1522.
Error: no uniprot for 'NP_000516'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 1523.
Error: no uniprot for 'NP_058132'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 1921.
Error: no uniprot for 'NP_058132'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 1922.
Error: no uniprot for 'NP_004563'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 2073.
Error: no uniprot for 'NP_004563'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 2074.
Error: no uniprot for 'NP_004563'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 2075.
Error: no uniprot for 'NP_004563'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 2076.
Error: no uniprot for 'NP_004563'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 2077.
Error: no uniprot for 'NP_001166284'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 2510.
Error: no uniprot for 'NP_001046'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 2639.
Error: no uniprot for 'NP_004605'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 2738.
Error: no uniprot for 'NP_004605'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 2739.
Error: no uniprot for 'NP_004605'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 2740.
Error: no uniprot for 'NP_004605'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 2741.
Error: no uniprot for 'NP_714915'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 2758.
Error: no uniprot for 'NP_714915'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 2759.
Error: no uniprot for 'NP_714915'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 2760.
Error: no uniprot for 'NP_714915'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 2761.
Error: no uniprot for 'NP_008958'. at ./sahni_to_mechismo.pl line 27, <STDIN> line 2791.
